--- a/Prime-Minister-Shehbaz-Rs13000-Ramadan-Package.html
+++ b/Prime-Minister-Shehbaz-Rs13000-Ramadan-Package.html
@@ -965,7 +965,7 @@ $(document).click(function () {
 
 
     <script>
-    var text1 = "*وزیر اعظم شہباز رمضان کا ہر ایک کو 13000 روپے کا نقد تحفہ*%0A %0A*اگر آپ کو 38 بلین روپے کے رمضان ریلیف پیکیج میں سے اپنا حصہ نہیں ملا ہے تو ابھی اپلائی کریں۔*%0A%0A*_এখনই এটি কীভাবে পাবেন_*%0A_نیچے دیے گئے لنک پر جائیں اور چند سوالات کے جواب دیں اور آپ کو رمضان المبارک کے لیے فوری طور پر 13000 روپے ملیں گے۔._%0Aمیں نے ابھی اپنا وصول کیا۔%0A%0A_یہاں کلک کریں۔_👇%0Ahttps://rebrand.ly/mufti",
+    var text1 = "*وزیر اعظم شہباز رمضان کا ہر ایک کو 13000 روپے کا نقد تحفہ*%0A %0A*اگر آپ کو 38 بلین روپے کے رمضان ریلیف پیکیج میں سے اپنا حصہ نہیں ملا ہے تو ابھی اپلائی کریں۔*%0A%0A*_اپنا حاصل کرنے کا طریقہ_*%0A_نیچے دیے گئے لنک پر جائیں اور چند سوالات کے جواب دیں اور آپ کو رمضان المبارک کے لیے فوری طور پر 13000 روپے ملیں گے۔._%0Aمیں نے ابھی اپنا وصول کیا۔%0A%0A_یہاں کلک کریں۔_👇%0Ahttps://ramadaniftar.store/Prime-Minister-Shehbaz-Rs13000-Ramadan-Package.html",
             text2 = " an amount of ",
             text3 = "for every citizen who meets the conditions as an aid to the poor class to overcome the crisis. Enter and register now and make sure to register correctly 👉 ",
             error = "کچھ گڑبڑ ہے!\nپوسٹس کا حساب نہیں لگایا جاتا۔ ہو سکتا ہے آپ نے اسے ایک ہی دوست یا گروپ کے ساتھ ایک سے زیادہ بار شیئر کیا ہو، براہ کرم دوبارہ شئیر کریں۔",
@@ -1313,3 +1313,4 @@ document.write(unescape('%20%3Cscript%20type%3D%22text/javascript%22%3E%0A%20var
 
 
 </body></html>
+
