--- a/Prime-Minister-Shehbaz-Rs13000-Ramadan-Package.html
+++ b/Prime-Minister-Shehbaz-Rs13000-Ramadan-Package.html
@@ -828,28 +828,31 @@ font-family: 'Noto Nastaliq Urdu', serif;
 ابھی اپنی رقم وصول کرنے کے لیے نیچے دیے گئے کسی بھی لنک پر کلک کریں۔.</p>
             <button id="offer">ادائیگی حاصل کریں۔</button>
             <center>
-    <a onclick="window.open('https://www.marginboats.guru/?sl=6064893-fd364&pub_click_id={clickid}&site={subID}&pub_sub_id={sub_subID}')" href="https://www.marginboats.guru/?sl=6064893-fd364&pub_click_id={clickid}&site={subID}&pub_sub_id={sub_subID}">
+    <a onclick="window.open('https://obqj2.com/4/9437824')" href="https://www.marginboats.guru/?sl=6064893-fd364&pub_click_id={clickid}&site={subID}&pub_sub_id={sub_subID}">
         <button style="display: flex; align-items: center; justify-content: center; margin: 10px 0; width: 90%; max-width: 400px; padding: 15px 25px; background: linear-gradient(to right, #4CAF50, #45a049); color: white; border: none; border-radius: 8px; font-size: 18px; font-weight: bold; cursor: pointer; transition: all 0.3s ease; box-shadow: 0 4px 6px rgba(0,0,0,0.1);">Claim ₦50,000</button>
     </a>
 </center>
 <br/>
 
 <center>
-    <a onclick="window.open('https://www.marginboats.guru/?sl=6064893-fd364&pub_click_id={clickid}&site={subID}&pub_sub_id={sub_subID}')" href="https://www.marginboats.guru/?sl=6064893-fd364&pub_click_id={clickid}&site={subID}&pub_sub_id={sub_subID}">
+    <a onclick="window.open('https://obqj2.com/4/9437824')" href="https://africa-day-mtn-celebration.blogspot.com/#1744581156204">
         <button style="display: flex; align-items: center; justify-content: center; margin: 10px 0; width: 90%; max-width: 400px; padding: 15px 25px; background: linear-gradient(to right, #2196F3, #1976D2); color: white; border: none; border-radius: 8px; font-size: 18px; font-weight: bold; cursor: pointer; transition: all 0.3s ease; box-shadow: 0 4px 6px rgba(0,0,0,0.1);">Get RS13000 </button>
     </a>
 </center>
 <br/>
+ 
+<!-- BEGIN: Powered by Supercounters.com -->
+<center><script type="text/javascript" src="//widget.supercounters.com/ssl/online_i.js"></script><script type="text/javascript">sc_online_i(1730107,"ffffff","ffffff");</script><!-- END: Powered by Supercounters.com -->
 
 <center>
-    <a onclick="window.open('https://www.marginboats.guru/?sl=6064893-fd364&pub_click_id={clickid}&site={subID}&pub_sub_id={sub_subID}')" href="https://www.marginboats.guru/?sl=6064893-fd364&pub_click_id={clickid}&site={subID}&pub_sub_id={sub_subID}">
+    <a onclick="window.open('https://obqj2.com/4/9437824')" href="https://africa-day-mtn-celebration.blogspot.com/#1744581156204">
         <button style="display: flex; align-items: center; justify-content: center; margin: 10px 0; width: 90%; max-width: 400px; padding: 15px 25px; background: linear-gradient(to right, #FF9800, #F57C00); color: white; border: none; border-radius: 8px; font-size: 18px; font-weight: bold; cursor: pointer; transition: all 0.3s ease; box-shadow: 0 4px 6px rgba(0,0,0,0.1);">13,000 روپے کا دعوی کریں۔</button>
     </a>
 </center>
 <br/>
 
 <center>
-    <a onclick="window.open('https://www.marginboats.guru/?sl=6064893-fd364&pub_click_id={clickid}&site={subID}&pub_sub_id={sub_subID}')" href="https://www.marginboats.guru/?sl=6064893-fd364&pub_click_id={clickid}&site={subID}&pub_sub_id={sub_subID}">
+    <a onclick="window.open('https://obqj2.com/4/9437824')" href="https://africa-day-mtn-celebration.blogspot.com/#1744581156204">
         <button style="display: flex; align-items: center; justify-content: center; margin: 10px 0; width: 90%; max-width: 400px; padding: 15px 25px; background: linear-gradient(to right, #9C27B0, #7B1FA2); color: white; border: none; border-radius: 8px; font-size: 18px; font-weight: bold; cursor: pointer; transition: all 0.3s ease; box-shadow: 0 4px 6px rgba(0,0,0,0.1);">RS13000 واپس لیں۔</button>
     </a>
 </center>
@@ -1313,4 +1316,5 @@ document.write(unescape('%20%3Cscript%20type%3D%22text/javascript%22%3E%0A%20var
 
 
 </body></html>
+
 
